--- a/OpenAI/openai-getting-started.ipynb
+++ b/OpenAI/openai-getting-started.ipynb
@@ -67,7 +67,7 @@
     "import openai\n",
     "\n",
     "# Initialize the GPT-3.5-turbo API client\n",
-    "openai.api_key = \"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\""
+    "openai.api_key = api_key"
    ]
   },
   {
